--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.0",
@@ -18,7 +19,7 @@
     "axios": "^1.2.4",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
-    "firebase": "^9.15.0",
+    "firebase": "^9.16.0",
     "framer-motion": "^8.5.3",
     "joi": "^17.7.0",
     "react": "^18.2.0",
